# l_o_v_e

./: .containerignore  .coverage.fluxboxpro_local.pid39893.XUpSGF5x.HNQIp837rWOh  .dockerignore  .envrc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  ETHICS.md  LICENSE  Makefile  Procfile  README.md  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  codeql.yml
archive/feature-status-reports/: FEATURE_COMPLETENESS_ASSESSMENT.md  MIGRATION_PROGRESS.md  PHASE_3_UI_ENHANCEMENTS_COMPLETE.md  PHASE_4_QUICK_WINS_COMPLETE.md  ai-models-readme.md  beautiful-insights-progress.md  beautiful-insights-readme.md  command-palette-implementation.md  command-palette-roadmap.md  data-viz-implementation.md  deep-feeling-implementation.md  heartbeat-completion.md  logging-migration-plan.md  zen-implementation.md  zen-readme.md
archive/implementation-plans/: MASTER_IMPLEMENTATION_ROADMAP.md  NEXT_SESSION_REVIEW_PLAN.md  OBSERVER_DOCUMENTATION_PLAN.md  OBSERVER_NEXT_SESSION_PLAN.md  ROADMAP_DECEMBER_2025.md  SEEDING_STRATEGY_COMPREHENSIVE.md  SEED_DATA_INTEGRATION_PLAN.md  VERSOR_DOCUMENTATION_PLAN.md  VERSOR_INLINE_DOCUMENTATION_PLAN.md  WEB_VERSION_IMPLEMENTATION_PLAN.md  listener-implementation-plan.md
archive/research/: assembly-guide.md  cover-email.md  patent-cover.md  patent-filing.md
archive/sessions/: EXPERIENCE_SESSION_SUMMARY.md  HANDOFF.md  LISTENER_SESSION_SUMMARY.md  MIGRATION_HANDOFF.md  OBSERVER_SESSION_SUMMARY.md  SESSION_PROGRESS_2025-12-04.md  TRANSITION_SYSTEM_SESSION_FINAL.md  TRANSITION_SYSTEM_SESSION_SUMMARY.md  VERSOR_SESSION_SUMMARY.md  listener-handoff.md
archive/status-reports/: C1_COMPLETION_SUMMARY.md  MIGRATION_STATUS_NEXT_STEPS.md  MILESTONE_REPORT.md  OBSERVER_CODE_DOCUMENTATION_COMPLETE.md  OBSERVER_DOCUMENTATION_COMPLETE.md  OBSERVER_INLINE_COMMENT_COMPLETION.md  OBSERVER_MODULE_FINAL_STATUS.md  OBSERVER_MODULE_HANDOFF.md  PHASES_1-2-3_COMPLETE.md  PHASES_5-6-7_COMPLETE.md  PHASE_5_DEMO_DATA_SUMMARY.md  PHASE_A_COMPLETION_SUMMARY.md  PHASE_B_COMPLETION_SUMMARY.md  PROGRESS_SUMMARY.md  RESTRUCTURE_VERIFICATION.md  TRANSITION_SYSTEM_COMPLETE.md  TRANSITION_SYSTEM_STATUS.md  VERSOR_DOCUMENTATION_COMPLETE.md  VERSOR_INLINE_DOCUMENTATION_COMPLETE.md  listener-completion-summary.md
data/models/: .gitkeep
docs/: .gitignore  .markdownlint.json  .pymarkdown.json  HPC_DEMO.md  LOVE_STACK_CURRENT_FUNCTIONALITY_FOR_OCTONION_SRS.md  MACOS_OPTIMIZED_STACK_RFC.md  MOBILE_AESTHETIC_RFC.md  OCTONION_IMPLEMENTATION_PLAN.md  OCTONION_INTEGRATION_PLAN.md  README.md  STANDALONE_RFC.md  api-reference.md  build-docs.sh  deploy-docs.sh  generate_ppa.sh  lint-docs.sh  mkdocs.yml  proposed_persona_integration_concept.md  provisional_patent_application.docx  provisional_patent_application.md  requirements-docs.txt  serve-docs.sh
docs/figures/: fig1.mmd  (+5 more)
experience/: .dockerignore  .gitignore  .gitlab-ci.yml  .prettierignore  Containerfile  EMOTION_VISUALIZATION_ENHANCEMENT.md  OBSERVER_BACKEND_PATH_CACHING.md  PATH_ANIMATION_ENHANCEMENTS.md  PATH_COMPUTATION_UX_IMPLEMENTATION.md  PATH_UX_SESSION_PROGRESS.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
experience/desktop/src-tauri/: Cargo.toml  tauri.conf.json
experience/desktop/src-tauri/capabilities/: default.json
experience/desktop/src-tauri/icons/: icon.icns
infra/: .gitignore  .setup-help.txt  CONTAINERIZATION_ROADMAP.md  DATABASE_INIT_IMPLEMENTATION.md  POSTGRESQL_FIX_SUMMARY.md  README.md  SETUP_UBUNTU_WSL.md  SETUP_WINDOWS.md  Setup-LoveStack.ps1  Stop-LoveStack.ps1  TOOL_VERSIONS  archive-project.sh  clone-love-repos.sh  deploy-to-gcp.sh  fresh-restart.sh  init-database.sh  run-love-stack.sh  setup-love-stack.sh  stop-love-stack.sh  test-love-stack.sh
listener/: .coverage.fluxboxpro_lan.pid15315.X3g71BXx.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid27942.XV5ABNCx.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid57708.XICUunxx.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid60094.XxlqaEEx.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid79728.XlFpl0xx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid13254.XEJKg44x.HNQIp837rWOh  .coverage.fluxboxpro_local.pid21718.Xgglbcwx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid26218.XWNOSwSx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid55676.XhRALisx.HNQIp837rWOh  .env.example  .gitignore  .gitlab-ci.yml  .pydocstyle  .pylintrc  Containerfile  README.md  SETUP.md  TESTING_GUIDE.md  inspect_arq.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
observer/: .coverage.fluxboxpro_lan.pid13285.XRItK0kx.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid21672.XN5htFlx.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid28895.X6tLCi7x.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid56783.XMpN4f6x.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid59242.X7LnPvfx.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid78975.XAcL1WWx.HNQIp837rWOh  .coverage.fluxboxpro_lan.pid79074.X1xbkWNx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid13017.XRQVzg7x.HNQIp837rWOh  .coverage.fluxboxpro_local.pid24634.X5oDvsdx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid26019.Xhs9yyWx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid33091.XkexEnPx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid46471.XCsDOkRx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid70331.X5F0saAx.HNQIp837rWOh  .coverage.fluxboxpro_local.pid9147.Xfh6CrKx.HNQIp837rWOh  .env.example  .gitignore  .gitlab-ci.yml  BRIDGE_EMOTIONS_README.md  CATEGORY_GRAPH.md  Containerfile  ENHANCED_STRATEGIES_README.md  README.md  SEEDING_SYSTEM_README.md  SETUP.md  TESTING_PLAN.md  TRANSITION_SYSTEM_DESIGN.md  WEBSOCKET_DESIGN.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_transition_system.sh  start.sh
personaplex/: .env.example  .gitignore  Containerfile  README.md  requirements.txt  start.sh
thoughts/: neat.md
versor/: .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  Containerfile  README.md  docker-compose.yml  octonion_prototype.py  pyproject.toml  requirements-dev.txt  requirements.txt
(+2264 files in other folders)
