[project]
name = "love-stack"
version = "0.1.0"
description = "L.O.V.E. Stack - Listener, Observer, Versor, Experience"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "L.O.V.E. Team", email = "love@example.com" }
]

# Shared Dependencies across all modules
dependencies = [
    "fastapi[all]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "httpx>=0.28.0",
    "PyJWT>=2.10.1",
    "cryptography>=44.0.0",
    "structlog>=24.1.0",
    "asgi-correlation-id>=4.3.0",
    "slowapi>=0.1.9",
    # Observability — OpenTelemetry
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[project.optional-dependencies]

# --- Module: Listener ---
listener = [
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.2",
    "numba>=0.60.0",
    "soundfile>=0.13.0",
    "praat-parselmouth>=0.4.7",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "ollama>=0.6.1",
    "spacy>=3.7.2",
    "transformers>=4.48.0",
    "langchain-google-vertexai>=2.0.0",
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "arq>=0.26.1",
    "redis>=5.2.1",
    "aiofiles>=24.1.0",
]

# --- Module: Observer ---
observer = [
    "sqlalchemy[asyncio]>=2.0.45",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "sentence-transformers>=2.7.0",
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "openai>=1.59.0",
    "pwdlib[argon2]>=0.2.0",
]

# --- Module: Versor ---
versor = [
    "numpy>=1.26.0",
    "scipy>=1.13.0",
]

# --- Module: PersonaPlex ---
personaplex = [
    "websockets>=12.0",
    "huggingface-hub>=0.24.0",
    "sentencepiece>=0.2.0",
    "einops>=0.7.0",
    "sounddevice>=0.5.0",
    "sphn>=0.1.4",
    # Moshi is handled as a submodule usually, but listing dependencies here helps
    # torch is already listed above but critical here
    "torch>=2.3.0",
    "numpy>=1.26.0",
]

# --- Dev Tools ---
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.100.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "pydocstyle>=6.3.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
    "vulture>=2.11",
    "autoflake>=2.3.0",
    "pre-commit>=3.6.0",
    "types-redis",
    "types-requests",
    "types-PyYAML",
    "types-aiofiles",
    "types-setuptools",
    "honcho>=1.1.0",
]

[tool.setuptools]
packages = ["listener", "observer", "versor", "experience", "personaplex", "infra"]

[tool.uv]
dev-dependencies = [
    "love-stack[dev]",
]

# --- Tool Config (Migrated from pyproject.toml) ---

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | migrations
  | __pycache__
  | \.pytest_cache
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*", "*/__pycache__/*", "*/venv/*"]
known_first_party = ["app", "listener", "observer", "versor", "infra"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0511",  # fixme
    "R0801",  # duplicate-code
]

[tool.pylint.format]
max-line-length = 100

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*.tests.*",
    "observer.tests.*",
    "listener.tests.*",
    "versor.tests.*",
    "observer.scripts.*",
    "scripts.*"
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-branch",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: marks tests as integration tests (slow)",
    "no_db_cleanup: skip database cleanup after test",
    "no_auth_override: skip automatic authentication override",
    "semantic: marks tests for semantic analysis",
    "unit: marks tests as unit tests",
    "slow: Slow-running tests",
    "requires_ollama: Tests requiring Ollama",
    "requires_redis: Tests requiring Redis",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
skip_empty = true
